--- a/components/stylings/upload.css
+++ b/components/stylings/upload.css
@@ -31,11 +31,11 @@ input {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 90vw;
-  height: fit-content;
   max-width: 800px;
-  max-height: 80vh;
+  height: 80vh;
   padding: 5px;
   animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
+  overflow: hidden;
 }
 
 .DialogContent:focus {
